FIX: out of bound on mobile

--- a/css/app.amp.css
+++ b/css/app.amp.css
@@ -416,6 +416,9 @@ pre code {
     font-size: 2.2rem;
     border-size: 0.08em;
   }
+  code {
+    font-size: 0.5em;
+  }
 }
 
 /*
